templates/iofog_template.yaml
---
# Source: iofog/templates/controller/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: iofog-controller
  labels:
    
    helm.sh/chart: iofog-0.1.1
    app.kubernetes.io/name: iofog-controller
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  selector:
    
    app.kubernetes.io/name: iofog-controller
    app.kubernetes.io/instance: release-name
  ports:
    - port: 51121
      name: controller
      targetPort: controller
    - port: 8080
      name: viewer
      targetPort: viewer
---
# Source: iofog/templates/controller/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: iofog-controller
  labels:
    
    helm.sh/chart: iofog-0.1.1
    app.kubernetes.io/name: iofog-controller
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      
      app.kubernetes.io/name: iofog-controller
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        
        helm.sh/chart: iofog-0.1.1
        app.kubernetes.io/name: iofog-controller
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/version: "2.0.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      containers:
        - name: controller
          image: quay.io/ctrontesting/iofog-controller:latest
          imagePullPolicy: Always
          ports:
            - name: controller
              containerPort: 51121
              protocol: TCP
            - name: viewer
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              port: 51121
              path: /api/v3/status
          volumeMounts:
            - mountPath: /usr/local/lib/node_modules/iofogcontroller/src/data/sqlite_files/
              name: database
              subPath: prod_database.sqlite
            - mountPath: /etc/config/api
              name: config
      volumes:
        - name: database
          persistentVolumeClaim:
            claimName:  iofog-database
        - name: config
          emptyDir: {}
---
# Source: iofog/templates/router/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: iofog-router
  labels:
    
    helm.sh/chart: iofog-0.1.1
    app.kubernetes.io/name: iofog-router
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2.0.0"
    app.kubernetes.io/managed-by: Helm
    skupper.io/component: "router"
spec:
  replicas: 1
  selector:
    matchLabels:
      
      app.kubernetes.io/name: iofog-router
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        
        helm.sh/chart: iofog-0.1.1
        app.kubernetes.io/name: iofog-router
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/version: "2.0.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: iofog-router
      containers:
        - name: router
          image: docker.io/iofog/router:2.0.1
          imagePullPolicy: IfNotPresent
          command:
            - "/qpid-dispatch/launch.sh"
          ports:
            - containerPort: 45672
              name: edge
              protocol: TCP
            - containerPort: 55672
              name: interior
              protocol: TCP

          readinessProbe:
            httpGet:
              port: 9090
              path: /healthz

          volumeMounts:
            - name: config
              mountPath: /etc/qpid-dispatch/qdrouterd.conf
#            - name: internal
#              mountPath: /etc/qpid-dispatch-certs/router-internal
#            - name: amqps
#              mountPath: /etc/qpid-dispatch-certs/amqps

      volumes:
        - name: config
          configMap:
            name: iofog-router
---
# Source: iofog/templates/controller/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: iofog
  labels:
    helm.sh/chart: iofog-0.1.1
    app.kubernetes.io/name: iofog
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2.0.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: viewer-default.my.cluster
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: iofog-controller
                port:
                  name: viewer
    - host: api-default.my.cluster
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: iofog-controller
                port:
                  name: controller
